# Hemlock

./: .dockerfile  Hemlock.code-workspace
.devcontainer/: .env  Dockerfile  devcontainer  devcontainer.json  docker-compose.yml
.github/scripts/: check_pr_ocp_indent.py
.github/workflows/: bootstrap.yml  bootstrap_platform.yml  test.yml
bootstrap/src/: deq.ml  dune
bootstrap/src/basis/: array.ml  array.mli  bytes.ml  bytes.mli  common.h  dune  errno.mli  executor.c  executor.h  fdableIntf.ml  file.c  file.ml  file.mli  ioring.c  ioring.h  os.ml  os.mli  stream.ml  stream.mli  stream_intf.ml
bootstrap/src/basis/os/: file.ml  file.mli  file_stubs.c  os.ml  os_stubs.c  system.ml  system.mli
bootstrap/src/basis/os/c/: c.ml  c.mli  c_string.ml  c_string.mli  errno.ml  errno.mli  fcntl.ml  fcntl.mli  fcntl_stubs.c  flags_intf.ml  flags_intf.mli  liburing.ml  liburing.mli  poll.ml  poll.mli  poll_stubs.c  sockaddr.ml  sockaddr.mli  sockaddr_stubs.c  sockaddr_stubs.h  socket.ml  socket.mli  socket_stubs.c  stat.ml  stat.mli  stat_stubs.c  unistd.ml  unistd.mli  unistd_stubs.c
bootstrap/src/c/: dune  errno.ml  errno.mli  errno_stubs.c  liburing.ml  liburing.mli  liburing_stubs.c  sockaddr.ml  sockaddr.mli  string_stubs.c
bootstrap/src/hmc/: scan.ml  scan.mli  source.ml  source.mli
bootstrap/src/mlc/: scan.mli
bootstrap/src/os/: dune
bootstrap/src/os/linux/: dune
bootstrap/test/basis/array/: test_append_prepend.ml  (+29 more)
bootstrap/test/hocc/: Example_introspect.expected.ml  Example_introspect.hmh  Example_ml.expected.ml  Example_ml.hmh
doc/design/: grant.md
(+575 files in other folders)
