(include_subdirs unqualified)
(library
 (name Basis)
 (public_name Hemlock.Basis)
 (private_modules convert convertIntf c_string)
 (foreign_stubs
  (language c)
  (names c_string_stubs entropy errno_deprecated errno_stubs fcntl_stubs file_stubs intnb intw liburing_stubs os_stubs poll_stubs sockaddr_stubs socket_stubs stat_stubs u64 unistd_stubs) (flags -fPIC))
 (c_library_flags (-luring))
 (synopsis "Hemlock bootstrap Basis library")
 )
